# rust_logging_test_repo

./: Cargo.toml
src/: main.rs
