[package]
name = "test_logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
tracing = {version = "0.1", features = ["release_max_level_warn"] }
tracing-futures = "0.2"
tracing-subscriber = {version = "0.3", features = ["json", "env-filter"]}
